tests/rgs/valid/enter_in_always_block.rgs
STORY quest PRIORITY 1.
    ACTION flee.
    EVENT danger ENVIRONMENT.
    EVENT killed ENVIRONMENT.
    PHASE active.
    PHASE failed.
    AGENT Hero:
        DURING ALWAYS:
            WHEN killed ENVIRONMENT:
                ENTER failed.
        DURING active:
            WHEN danger ENVIRONMENT:
                DO flee.
